Bug 849519 - Raise INDEX_SIZE_ERR if media element volume is set to NaN.  r=doublec